Fix new step alignment and author list in protocols [SCI-6991]

--- a/app/assets/stylesheets/protocols/protocol.scss
+++ b/app/assets/stylesheets/protocols/protocol.scss
@@ -30,7 +30,13 @@
       .authors-list {
         flex-basis: calc(100% - 90px);
         flex-grow: 1;
-        margin-left: .5em;
+        margin-left: .75em;
+
+        &:hover:not(.editing) {
+          .sci-inline-edit__content {
+            border: $border-focus;
+          }
+        }
       }
 
       * {
@@ -106,6 +112,10 @@
     font-weight: bold;
     margin-bottom: 32px;
     margin-top: 28px;
+  }
+
+  .repository-new-step {
+    margin-left: 1.5em;
   }
 }
 
